Fixed sonarqube errors